--- a/donors.html
+++ b/donors.html
@@ -164,28 +164,28 @@
 								<div class="slider-holder">
 									<div class="donors-slider donors-slider--style-2 offset-margin">
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_1.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_2.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_3.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_4.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_5.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_6.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_7.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_8.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 									</div>
 								</div>
