--- a/donors.html
+++ b/donors.html
@@ -53,7 +53,7 @@
 						<li class="aside-menu__item"><a class="aside-menu__link" href="about.html"><span>About Us</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="gallery.html"><span>Gallery</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="events.html"><span>Events</span></a></li>
-						<li class="aside-menu__item"><a class="aside-menu__link" href="index.html"><span>Interviews</span></a></li>
+						<li class="aside-menu__item"><a class="aside-menu__link" href="interviews.html"><span>Interviews</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="contacts.html"><span>Contact</span></a></li>
 						
 					</ul>
@@ -132,7 +132,7 @@
 			<main class="main">
 				<section class="promo-primary">
 					<picture>
-						<source srcset="img/alerts.jpg" media="(min-width: 992px)"/><img class="img--bg" src="img/alerts.jpg" alt="img"/>
+						<source srcset="img/donors.jpg" media="(min-width: 992px)"/><img class="img--bg" src="img/donors.jpg" alt="img"/>
 					</picture>
 					<div class="promo-primary__description"> <span>Omnipotent</span></div>
 					<div class="container">
