--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<li class="aside-menu__item"><a class="aside-menu__link" href="about.html"><span>About Us</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="gallery.html"><span>Gallery</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="events.html"><span>Events</span></a></li>
-						<li class="aside-menu__item"><a class="aside-menu__link" href="index.html"><span>Interviews</span></a></li>
+						<li class="aside-menu__item"><a class="aside-menu__link" href="interviews.html"><span>Interviews</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="contacts.html"><span>Contact</span></a></li>
 						
 					</ul>
@@ -149,7 +149,7 @@
 												<div class="promo-slider__wrapper-2">
 													<p class="promo-slider__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac. Mauris leo magna, tincidunt quis congue sit amet.</p>
 												</div>
-												<div class="promo-slider__wrapper-3"><a class="button promo-slider__button button--primary" href="about.html">Learn more</a></div>
+												<div class="promo-slider__wrapper-3"><a class="button promo-slider__button button--primary" href="#">Learn more</a></div>
 											</div>
 										</div>
 									</div>
@@ -176,7 +176,7 @@
 								</div>
 								<p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac.</strong></p>
 								<p>Etiam metus mauris consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac. Mauris leo magna, tincidunt quis congue sit amet, suscipit sit amet nibh. </p>
-								<p> Phasellus convallis sem nunc, id auctor nibh consectetur ac. Mauris leo magna, tincidunt quis congue sit amet, suscipit sit amet nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac. </p><a class="button button--primary" href="about.html">Learn More</a>
+								<p> Phasellus convallis sem nunc, id auctor nibh consectetur ac. Mauris leo magna, tincidunt quis congue sit amet, suscipit sit amet nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac. </p><a class="button button--primary" href="about.html">More About</a>
 							</div>
 							<div class="col-lg-6 col-xl-5 offset-xl-1">
 								<div class="info-box"><img class="img--bg" src="img/about-us-2.jpg" alt="img"/>
