--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
 						<li class="aside-menu__item"><a class="aside-menu__link" href="about.html"><span>About Us</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="gallery.html"><span>Gallery</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="events.html"><span>Events</span></a></li>
-						<li class="aside-menu__item"><a class="aside-menu__link" href="index.html"><span>Interviews</span></a></li>
+						<li class="aside-menu__item"><a class="aside-menu__link" href="interviews.html"><span>Interviews</span></a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="contacts.html"><span>Contact</span></a></li>
 						
 					</ul>
