--- a/donors.html
+++ b/donors.html
@@ -132,7 +132,7 @@
 			<main class="main">
 				<section class="promo-primary">
 					<picture>
-						<source srcset="img/donors.jpg" media="(min-width: 992px)"/><img class="img--bg" src="img/donors.jpg" alt="img"/>
+						<source srcset="img/.jpg" media="(min-width: 992px)"/><img class="img--bg" src="img/alerts.jpg" alt="img"/>
 					</picture>
 					<div class="promo-primary__description"> <span>Omnipotent</span></div>
 					<div class="container">
