--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 		<link rel="shortcut icon" href="img/favicon.ico"/>
-		<title>About me | Omnipotent ovement</title>
+		<title>About us | Omnipotent ovement</title>
 		<!-- styles-->
 		<link rel="stylesheet" href="css/styles.min.css"/>
 		<!-- web-font loader-->
@@ -63,8 +63,8 @@
 					<ul class="aside-menu">
 						<li class="aside-menu__item"><a class="aside-menu__link" href="team.html">Meet Our Team</a></li>
 						<li class="aside-menu__item"><a class="aside-menu__link" href="volunteer.html">Become a Volunteer</a></li>
-						<li class="aside-menu__item"><a class="aside-menu__link" href="#">Become a Sponser</a></li>
-						<li class="aside-menu__item"><a class="aside-menu__link" href="#">Donate</a></li>
+						<li class="aside-menu__item"><a class="aside-menu__link" href="donors.html">Become a Sponser</a></li>
+						<li class="aside-menu__item"><a class="aside-menu__link" href="donors.html">Donate</a></li>
 					</ul>
 					<!-- aside menu end-->
 					<div class="aside-inner"><span class="aside-inner__title">Email</span><a class="aside-inner__link" href="mailto:info@omnimov.com">info@omnimov.com</a></div>
