--- a/team.html
+++ b/team.html
@@ -159,8 +159,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_1.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_1.jpg" alt="teammate"/></div>
@@ -177,8 +177,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_2.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_2.jpg" alt="teammate"/></div>
@@ -195,8 +195,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_3.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_3.jpg" alt="teammate"/></div>
@@ -213,8 +213,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_4.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_4.jpg" alt="teammate"/></div>
@@ -231,8 +231,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_5.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_5.jpg" alt="teammate"/></div>
@@ -249,8 +249,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_6.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_6.jpg" alt="teammate"/></div>
@@ -267,8 +267,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_7.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_7.jpg" alt="teammate"/></div>
@@ -285,8 +285,8 @@
 								<div class="team-item team-item--rounded">
 									<ul class="team-item__socials">
 										<li class="item--active"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-										<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_8.png" alt="layout"/>
 										<div class="team-item__img"><img class="img--bg" src="img/team_8.jpg" alt="teammate"/></div>
@@ -330,14 +330,16 @@
 							<!-- footer nav start-->
 							<nav>
 								<ul class="footer-menu">
-									<li class="footer-menu__item footer-menu__item--active"><a class="footer-menu__link" href="#">Home</a></li>
-									<li class="footer-menu__item"><a class="footer-menu__link" href="#">About</a></li>
-									<li class="footer-menu__item"><a class="footer-menu__link" href="#">Contact Us</a></li>
-									<li class="footer-menu__item"><a class="footer-menu__link" href="#">Events</a></li>
-									<li class="footer-menu__item"><a class="footer-menu__link" href="#">Gallery</a></li>
-									<li class="footer-menu__item"><a class="footer-menu__link" href="#">Interviews</a></li>
-									<li class="footer-menu__item"><a class="footer-menu__link" href="#">Volounteer</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="index.html">Home</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="about.html">About</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="contacts.html">Contact Us</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="events.html">Events</a></li>
+									<li class="footer-menu__item footer-menu__item--active"><a class="footer-menu__link" href="gallery.html">Gallery</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="interviews.html">Interviews</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="volunteer.html">Volunteer</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="donors.html">Donors</a></li>
 									<li class="footer-menu__item"><a class="footer-menu__link" href="#">Sponser</a></li>
+									<li class="footer-menu__item"><a class="footer-menu__link" href="team.html">Our Team</a></li>
 							</nav>
 							<!-- footer nav end-->
 						</div>
@@ -348,14 +350,10 @@
 					</div>
 					<div class="row align-items-baseline">
 						<div class="col-md-6">
-							<p class="footer-copyright">© 2020 Helpo Charity Template by Artureanec</p>
-						</div>
-						<div class="col-md-6">
-							<div class="footer-privacy"><a class="footer-privacy__link" href="#">Privacy Policy</a><span class="footer-privacy__divider">|</span><a class="footer-privacy__link" href="#">Term and Condision</a></div>
+							<p class="footer-copyright">© 2021 Omnipotent Movement</p>
 						</div>
 					</div>
 				</div>
-				
 			</footer>
 			<!-- footer end-->
 		</div>
