--- a/about.html
+++ b/about.html
@@ -348,16 +348,16 @@
 								<div class="slider-holder">
 									<div class="donors-slider donors-slider--style-1">
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_1.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_2.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_3.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 										<div class="donors-slider__item">
-											<div class="donors-slider__img"><img src="img/donor_4.png" alt="donor"/></div>
+											<div class="donors-slider__img"><img src="img/donor.png" alt="donor"/></div>
 										</div>
 									</div>
 								</div>
