--- a/volunteer.html
+++ b/volunteer.html
@@ -173,7 +173,7 @@
 					<div class="container">
 						<div class="row margin-bottom">
 							<div class="col-lg-6">
-								<div class="heading heading--primary"><span class="heading__pre-title">Fill Form and Beacame Volonteer</span>
+								<div class="heading heading--primary"><span class="heading__pre-title">Fill Form and Beacome Volunteer</span>
 									<h2 class="heading__title"><span>Complete</span> <span>the Form</span></h2>
 								</div>
 							</div>
