--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 								<div class="heading heading--primary"><span class="heading__pre-title">About Us</span>
 									<h2 class="heading__title"><span>About</span> <span>Omnipotent Movement</span></h2>
 								</div>
-								<p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac.</strong></p>
-								<p>Etiam metus mauris consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac. Mauris leo magna, tincidunt quis congue sit amet, suscipit sit amet nibh. </p>
-								<p> Phasellus convallis sem nunc, id auctor nibh consectetur ac. Mauris leo magna, tincidunt quis congue sit amet, suscipit sit amet nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac. </p><a class="button button--primary" href="about.html">Learn More</a>
+								<p><strong>It’s a Christian youth movement in Ethiopia. This movement came to a practical and official existence since 2017.</strong></p>
+								<p>This movement is not affiliated by any specific church theological views rather considers the truth of the bible. As our motto “We are proud to be Christians” says being a follower of Christ changed our lives in the good way that we are proud of it and want to share it with all the people of the world.  </p>
+								<p>The movement is not about religion rather it’s about a truth we received. The name, Omnipotent Movement came from the fact that we realized that our God is “All Able” which is represented by OMNIPOTENT GOD through all our lives and activities we have been gone through </p><a class="button button--primary" href="about.html">Learn More</a>
 							</div>
 							<div class="col-lg-6 col-xl-5 offset-xl-1">
 								<div class="info-box"><img class="img--bg" src="img/about-us-2.jpg" alt="img"/>
