--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 					<div class="promo-slider">
 						<div class="promo-slider__item promo-slider__item--style-1">
 							<picture>
-								<source srcset="img/front-3_promo.jpg" media="(min-width: 835px)"/>
-								<source srcset="img/front-3_promo.jpg" media="(min-width: 376px)"/><img class="img--bg" src="img/front-3_promo.jpg" alt="img"/>
+								<source srcset="img/home_cover.jpg" media="(min-width: 835px)"/>
+								<source srcset="img/home_cover.jpg" media="(min-width: 376px)"/><img class="img--bg" src="img/home_cover.jpg" alt="img"/>
 							</picture>
 							<div class="container">
 								<div class="row">
