--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 								<p>The movement is not about religion rather it’s about a truth we received. The name, Omnipotent Movement came from the fact that we realized that our God is “All Able” which is represented by OMNIPOTENT GOD through all our lives and activities we have been gone through </p><a class="button button--primary" href="about.html">Learn More</a>
 							</div>
 							<div class="col-lg-6 col-xl-5 offset-xl-1">
-								<div class="info-box"><img class="img--bg" src="img/about-us-2.jpg" alt="img"/>
+								<div class="info-box"><img class="img--bg" src="img/vol.png" alt="img"/>
 									<h4 class="info-box__title">We are Volunteer Youth Team</h4>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac.</p><a class="info-box__link" href="volunteer.html">Become a volounteer</a>
 								</div>
