--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 																		</div>
 																	</div>
 																</div>
-																<!-- slider nav end--><img class="img--bg" src="img/lion.jpg" alt="img"/>
+																<!-- slider nav end--><img class="img--bg" src="img/int1.jpg" alt="img"/>
 															</div>
 														</div>
 														<div class="col-xl-4">
