--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 																		</div>
 																	</div>
 																</div>
-																<!-- slider nav end--><img class="img--bg" src="img/action-block_2.jpg" alt="img"/>
+																<!-- slider nav end--><img class="img--bg" src="img/int2.png" alt="img"/>
 															</div>
 														</div>
 														<div class="col-xl-4">
