--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 						</div>
 						<div class="projects-slider__item">
 							<div class="projects-masonry__item projects-masonry__item--primary projects-masonry__item--height-2">
-								<div class="projects-masonry__img"><img class="img--bg" src="img/char4.jpg" alt="img"/>
+								<div class="projects-masonry__img"><img class="img--bg" src="img/char4.png" alt="img"/>
 									<div class="projects-masonry__inner"><span class="projects-masonry__badge" style="background: #49C2DF;">Charity</span>
 										<h3 class="projects-masonry__title"> <a href="cause-details.html">Cloth Donation</a></h3>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac.</p>
