--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 							<div class="col-lg-6 col-xl-5 offset-xl-1">
 								<div class="info-box"><img class="img--bg" src="img/vol.png" alt="img"/>
 									<h4 class="info-box__title">We are Volunteer Youth Team</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac.</p><a class="info-box__link" href="volunteer.html">Become a volounteer</a>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac.</p><a class="action-block__link button button--primary" href="volunteer.html">Become</a>
 								</div>
 							</div>
 						</div>
@@ -436,23 +436,23 @@
 						<div class="row">
 							<div class="col-md-6 col-lg-4">
 								<div class="event-item">
-									<div class="event-item__img"><img class="img--bg" src="img/event_1.jpg" alt="img"/></div>
+									<div class="event-item__img"><img class="img--bg" src="img/event1.png" alt="img"/></div>
 									<div class="event-item__content">
 										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Holy Spirit Concert</a></h6>
 										<p><b>Addis Ababa, </b>Ethiopia</p>
 										<p><b>September 12,</b> 2019</p>
-										<p><b>10:00 AM - 18:00 PM,</b> Everyday</p>
+										<p><b>10:00 AM - 18:00 PM</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-6 col-lg-4">
 								<div class="event-item">
-									<div class="event-item__img"><img class="img--bg" src="img/event_2.jpg" alt="img"/></div>
+									<div class="event-item__img"><img class="img--bg" src="img/event2.png" alt="img"/></div>
 									<div class="event-item__content">
 										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Charity Day</a></h6>
 										<p><b>Addis Ababa, </b>Ethiopia</p>
 										<p><b>September 12,</b> 2019</p>
-										<p><b>10:00 AM - 18:00 PM,</b> Everyday</p>
+										<p><b>10:00 AM - 18:00 PM</p>
 									</div>
 								</div>
 							</div>
@@ -463,7 +463,7 @@
 										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Poetry Day</a></h6>
 										<p><b>Addis Ababa, </b>Ethiopia</p>
 										<p><b>September 12,</b> 2019</p>
-										<p><b>10:00 AM - 18:00 PM,</b> Everyday</p>
+										<p><b>10:00 AM - 18:00 PM</p>
 									</div>
 								</div>
 							</div>
@@ -474,28 +474,6 @@
 					</div>
 				</section>
 				<!-- events end-->
-				<!-- section start-->
-				<section class="section no-padding-top no-padding-bottom">
-					<div class="row no-gutters">
-						<div class="col-xl-6">
-							<div class="action-block">
-								<div class="action-block__inner"><img class="img--bg" src="img/action-block_1.jpg" alt="img"/>
-									<h3 class="action-block__title">We are passionate Volounteer Team</h3>
-									<p class="action-block__text">viverra scelerisque sollicitudin eu, accumsan nec dolor. Fusce commodo hendrerit turpis quis commodo.</p><a class="action-block__link button button--primary" href="volunteer.html">Become</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-6">
-							<div class="action-block">
-								<div class="action-block__inner"><img class="img--bg" src="img/action-block_2.jpg" alt="img"/>
-									<h3 class="action-block__title">All donations can help change a life</h3>
-									<p class="action-block__text">ornare sed eros quis, facilisis bibendum ligula. Nullam nec velit risus0. accumsan nec dolor. Fusce commodo hendrerit Donec id ligula sit amet libero convallis tristique.</p><a class="action-block__link button button--primary" href="donors.html">Donate</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!-- section end-->
 				<!-- testimonials style-1 start-->
 				<section class="section testimonials testimonials--style-1">
 					<div class="container">
