--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 					<div class="promo-slider">
 						<div class="promo-slider__item promo-slider__item--style-1">
 							<picture>
-								<source srcset="img/home_cover.png" media="(min-width: 835px)"/>
-								<source srcset="img/home_cover.png" media="(min-width: 376px)"/><img class="img--bg" src="img/home_cover.png" alt="img"/>
+								<source srcset="img/home_cover.jpg.png" media="(min-width: 835px)"/>
+								<source srcset="img/home_cover.jpg.png" media="(min-width: 376px)"/><img class="img--bg" src="img/home_cover.jpg.png" alt="img"/>
 							</picture>
 							<div class="container">
 								<div class="row">
@@ -441,7 +441,7 @@
 										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Holy Spirit Concert</a></h6>
 										<p><b>Addis Ababa, </b>Ethiopia</p>
 										<p><b>September 12,</b> 2019</p>
-										<p><b>10:00 AM - 18:00 PM</p>
+										<p><b>10:00 AM - 18:00 PM,</b> Everyday</p>
 									</div>
 								</div>
 							</div>
@@ -452,7 +452,7 @@
 										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Charity Day</a></h6>
 										<p><b>Addis Ababa, </b>Ethiopia</p>
 										<p><b>September 12,</b> 2019</p>
-										<p><b>10:00 AM - 18:00 PM</p>
+										<p><b>10:00 AM - 18:00 PM,</b> Everyday</p>
 									</div>
 								</div>
 							</div>
@@ -463,7 +463,7 @@
 										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Poetry Day</a></h6>
 										<p><b>Addis Ababa, </b>Ethiopia</p>
 										<p><b>September 12,</b> 2019</p>
-										<p><b>10:00 AM - 18:00 PM</p>
+										<p><b>10:00 AM - 18:00 PM,</b> Everyday</p>
 									</div>
 								</div>
 							</div>
