--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@
 							</div>
 							<div class="col-md-6 col-lg-4">
 								<div class="event-item">
-									<div class="event-item__img"><img class="img--bg" src="img/event_3.jpg" alt="img"/></div>
+									<div class="event-item__img"><img class="img--bg" src="img/event1.png" alt="img"/></div>
 									<div class="event-item__content">
-										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Poetry Day</a></h6>
+										<h6 class="event-item__title"><a href="event-details.html">Omnipotent Holy Spirit Concert</a></h6>
 										<p><b>Addis Ababa, </b>Ethiopia</p>
 										<p><b>September 12,</b> 2019</p>
 										<p><b>10:00 AM - 18:00 PM,</b></p>
@@ -546,7 +546,7 @@
 										<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									</ul>
 									<div class="team-item__img-holder"><img class="img--layout" src="img/team_1.png" alt="layout"/>
-										<div class="team-item__img"><img class="img--bg" src="img/team_1.jpg" alt="teammate"/></div>
+										<div class="team-item__img"><img class="img--bg" src="img/team1.png" alt="teammate"/></div>
 									</div>
 									<div class="team-item__description">
 										<div class="team-item__name">Name Goes Here</div>
