--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 													<h2 class="promo-slider__title"><span>Hey there we are</span><br/><span>Omnipotent Movement</span></h2>
 												</div>
 												<div class="promo-slider__wrapper-2">
-													<p class="promo-slider__subtitle">Welcome to official website of omnipotent movement. We are a christian movement in Ethiopia. Learn more about us.</p>
+													<p class="promo-slider__subtitle">Welcome to official website of omnipotent movement. We are a christian movement in Ethiopia aiming to create a christian aspiration among the youth. Learn more about us.</p>
 												</div>
 												<div class="promo-slider__wrapper-3"><a class="button promo-slider__button button--primary" href="about.html">Learn more</a></div>
 											</div>
