--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</ul>
 					<!-- aside menu end-->
 					<div class="aside-inner"><span class="aside-inner__title">Email</span><a class="aside-inner__link" href="mailto:info@omnimov.com">info@omnimov.com</a></div>
-					<div class="aside-inner"><span class="aside-inner__title">Phone numbers</span><a class="aside-inner__link" href="tel:+251911000000">+ 251 911 00 00 00</a><a class="aside-inner__link" href="tel:+251911000000">+ 251 911 00 00 00</a></div>
+					<div class="aside-inner"><span class="aside-inner__title">Phone numbers</span><a class="aside-inner__link" href="tel:+251911000000">+ 251 955 34 37 97</a><a class="aside-inner__link" href="tel:+251911000000">+ 251 924 45 16 66</a></div>
 					<ul class="aside-socials">
 						<li class="aside-socials__item"><a class="aside-socials__link" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						<li class="aside-socials__item"><a class="aside-socials__link" href="#"><i class="fa fa-telegram aria-hidden="true"></i></a></li>
@@ -83,7 +83,7 @@
 			<div class="top-bar d-none d-lg-block">
 				<div class="container-fluid">
 					<div class="row align-items-end">
-						<div class="col-lg-9"><a class="top-bar__link" href="tel:+180012345678">+ 251 - 000 000 00</a><a class="top-bar__link" href="tel:+18009756511">+ 251 - 000 000 00</a><a class="top-bar__link" href="mailto:info@omnimov.com">info@omnimov.com</a></div>
+						<div class="col-lg-9"><a class="top-bar__link" href="tel:+180012345678">+ 251 924 45 16 66</a><a class="top-bar__link" href="tel:+18009756511">+ 251 955 34 37 97</a><a class="top-bar__link" href="mailto:info@omnimov.com">info@omnipotentmovement.com</a></div>
 						<div class="col-lg-3 text-right">
 							<ul class="socials">
 								<li class="socials__item"><a class="socials__link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
