--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 							<div class="col-lg-6 col-xl-5 offset-xl-1">
 								<div class="info-box"><img class="img--bg" src="img/vol.png" alt="img"/>
 									<h4 class="info-box__title">We are Volunteer Youth Team</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac.</p><a class="action-block__link button button--primary" href="volunteer.html">Become</a>
+									<p>We would like to work with you. Also it is great to have you with us. Click the button down below and become part of our team.</p><a class="action-block__link button button--primary" href="volunteer.html">Become</a>
 								</div>
 							</div>
 						</div>
