--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 									<div class="counter-item__top">
 										<h6 class="counter-item__title">People we helped</h6>
 									</div>
-									<div class="counter-item__lower"><span class="js-counter">300+</span></div>
+									<div class="counter-item__lower"><span class="js-counter">300</span></div>
 								</div>
 							</div>
 							<div class="col-md-4 text-center">
@@ -213,7 +213,7 @@
 									<div class="counter-item__top">
 										<h6 class="counter-item__title">People attended our events</h6>
 									</div>
-									<div class="counter-item__lower"><span class="js-counter">1000+</span></div>
+									<div class="counter-item__lower"><span class="js-counter">1000</span></div>
 								</div>
 							</div>
 						</div>
