--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 								</div>
 							</div>
 							<div class="col-xl-8">
-								<p class="margin-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis sem nunc, id auctor nibh consectetur ac. Mauris leo magna, tincidunt quis congue sit amet, suscipit sit amet nibh. Etiam metus mauris, viverra scelerisque sollicitudin eu, accumsan nec dolor.</p><a class="button button--primary" href="interviews.html">More Interviews</a>
+								<p class="margin-30">Through out these years we have interviewed several Gospel singers, Gospel rappers, and other people who are dedicated to server god. and we want to share their experiences and aspirations in life with you.</p><a class="button button--primary" href="interviews.html">More Interviews</a>
 							</div>
 						</div>
 						<div class="row offset-margin">
